@@ -1,4 +1,4 @@
-Wed Jan 16 14:06:37 2008 - Andras Mantia <amantia@kde.org>
+January 2008 - Andras Mantia <amantia@kde.org>
     o support executing of slots that don't have arguments
     o add "execute" method for PushButton
     o possibility to pass parameters for ScriptObject added
@@ -6,6 +6,8 @@ Wed Jan 16 14:06:37 2008 - Andras Mantia <amantia@kde.org>
     o add createWidget function for on-the-fly widget creation
     o fix "exit" command
     o make a="Label1"; a.setText("foo") work
+    o add setCellWidget/cellWidget for Table
+    o add setEditable(bool) for widgets that are editable
     o rework the plugin system
     o bump version to 1.3
 
